API_Reference/pymilvus/v2.4.x/ORM/CollectionSchema/verify.md
# verify()

This operation performs final validation checks on the CollectionSchema to detect any obvious problems.

## Request Syntax

```python
verify()
```

__PARAMETERS:__

None

__RETURN TYPE:__

None

__RETURNS:__

None

__EXCEPTIONS:__

- __MilvusException__

    This exception will be raised when any error occurs during this operation.

## Examples

```python
from pymilvus import CollectionSchema, FieldSchema, DataType  

# Create field schemas
primary_key = FieldSchema(
    name="id",
    dtype=DataType.INT64,
    is_primary=True,
)

vector = FieldSchema(
    name="vector",
    dtype=DataType.FLOAT_VECTOR,
    dim=768,
)

# Create a CollectionSchema with field schemas

schema = CollectionSchema(
    fields = [primary_key, vector]
)

# Call verify() to validate the schema 
schema.verify()
```

## Related operations

The following operations are related to `verify()`:

- [FieldSchema](../FieldSchema/FieldSchema.md)

- [DataType](../../MilvusClient/Collections/DataType.md)

- [add_field()](./add_field.md)

- [construct_from_dict()](./construct_from_dict.md)

- [to_dict()](./to_dict.md)

